--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -47,18 +47,23 @@
         android:id="@+id/buttonRegister"
         android:layout_width="191dp"
         android:layout_height="49dp"
+        android:layout_marginTop="32dp"
         android:text="@string/register_button_text"
         app:cornerRadius="20dp"
-        tools:layout_editor_absoluteX="85dp"
-        tools:layout_editor_absoluteY="296dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextRegisterPassword" />
 
     <Button
         android:id="@+id/buttonCancelToLogin"
         android:layout_width="93dp"
         android:layout_height="42dp"
+        android:layout_marginTop="16dp"
         android:background="@android:color/transparent"
         android:text="@string/cancel_button_text"
         android:textColor="@android:color/black"
-        tools:layout_editor_absoluteX="203dp"
-        tools:layout_editor_absoluteY="370dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.654"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonRegister" />
 </androidx.constraintlayout.widget.ConstraintLayout>
