--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -9,44 +9,51 @@
 
     <EditText
         android:id="@+id/editTextTextEmailAddress"
-        android:layout_width="241dp"
-        android:layout_height="46dp"
+        android:layout_width="0dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="84dp"
+        android:layout_marginEnd="32dp"
         android:ems="10"
         android:hint="@string/email_placeholder_text"
         android:inputType="textEmailAddress"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="60dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/editTextTextPassword"
-        android:layout_width="242dp"
-        android:layout_height="42dp"
+        android:layout_width="0dp"
+        android:layout_height="48dp"
         android:layout_marginTop="28dp"
         android:ems="10"
         android:hint="@string/password_placeholder_text"
         android:inputType="textPassword"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
-        tools:layout_editor_absoluteX="59dp" />
+        app:layout_constraintEnd_toEndOf="@+id/editTextTextEmailAddress"
+        app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress"
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />
 
     <Button
         android:id="@+id/buttonLogin"
-        android:layout_width="245dp"
+        android:layout_width="0dp"
         android:layout_height="54dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="60dp"
+        android:layout_marginEnd="32dp"
         android:text="@string/login_button_text"
         app:cornerRadius="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
-        tools:layout_editor_absoluteX="58dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />
 
     <Button
         android:id="@+id/buttonRegistration"
         android:layout_width="227dp"
-        android:layout_height="39dp"
+        android:layout_height="48dp"
         android:background="@android:color/transparent"
         android:text="@string/registration_button_text"
         android:textColor="@android:color/black"
         android:textSize="12sp"
-        tools:layout_editor_absoluteX="67dp"
-        tools:layout_editor_absoluteY="330dp" />
+        app:layout_constraintEnd_toEndOf="@+id/buttonLogin"
+        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />
 </androidx.constraintlayout.widget.ConstraintLayout>
