--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -5,7 +5,7 @@
     android:id="@+id/frameLayout2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RegistrationFragment" >
+    tools:context=".RegistrationFragment">
 
     <EditText
         android:id="@+id/editTextRegisterName"
@@ -49,10 +49,11 @@
     <Button
         android:id="@+id/buttonRegister"
         android:layout_width="0dp"
-        android:layout_height="49dp"
+        android:layout_height="54dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
+        android:backgroundTint="@color/primary"
         android:text="@string/register_button_text"
         app:cornerRadius="20dp"
         app:layout_constraintEnd_toEndOf="parent"
