--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -42,6 +42,7 @@
         android:layout_marginEnd="32dp"
         android:text="@string/login_button_text"
         app:cornerRadius="20dp"
+        android:textAllCaps="false"
         android:backgroundTint="@color/primary"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -55,6 +56,7 @@
         android:text="@string/registration_button_text"
         android:textColor="@android:color/black"
         android:textSize="12sp"
+        android:textAllCaps="false"
         app:layout_constraintEnd_toEndOf="@+id/buttonLogin"
         app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />
 </androidx.constraintlayout.widget.ConstraintLayout>
