--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -56,6 +56,7 @@
         android:backgroundTint="@color/primary"
         android:text="@string/register_button_text"
         app:cornerRadius="20dp"
+        android:textAllCaps="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextRegisterPassword" />
@@ -66,6 +67,7 @@
         android:layout_height="48dp"
         android:background="@android:color/transparent"
         android:text="@string/cancel_button_text"
+        android:textAllCaps="false"
         android:textColor="@android:color/black"
         app:layout_constraintEnd_toEndOf="@+id/buttonRegister"
         app:layout_constraintTop_toBottomOf="@+id/buttonRegister" />
