--- a/app/src/main/res/layout/fragment_chatrooms.xml
+++ b/app/src/main/res/layout/fragment_chatrooms.xml
@@ -26,12 +26,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="16dp"
-                app:backgroundTint="@android:color/transparent"
                 android:text="@string/new_chatroom"
-                android:textColor="@color/primary"
+                android:textColor="@color/white"
                 app:cornerRadius="8dp"
-                app:strokeColor="@color/primary"
-                app:strokeWidth="2dp"
+                app:backgroundTint="@color/primary"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
