--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:ignore="HardcodedText">
 
     <group android:checkableBehavior="single">
@@ -14,5 +15,11 @@
             android:icon="@drawable/ic_logout"
             android:title="Logout" />
     </group>
+
+    <item
+        android:id="@+id/nav_uno_game"
+        android:icon="@drawable/uno_card"
+        app:showAsAction="always"
+        tools:ignore="MenuTitle" />
 
 </menu>
