--- a/app/src/main/res/layout/fragment_view_chatroom.xml
+++ b/app/src/main/res/layout/fragment_view_chatroom.xml
@@ -82,14 +82,14 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toEndOf="@+id/cardView3"
+                app:layout_constraintStart_toEndOf="@+id/cardViewUnoGame"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.0">
 
             </androidx.recyclerview.widget.RecyclerView>
 
             <androidx.cardview.widget.CardView
-                android:id="@+id/cardView3"
+                android:id="@+id/cardViewUnoGame"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 app:layout_constraintBottom_toBottomOf="@+id/viewersRecyclerView"
