--- a/app/src/main/res/layout/fragment_new_game.xml
+++ b/app/src/main/res/layout/fragment_new_game.xml
@@ -8,8 +8,8 @@
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="370dp"
+        android:layout_height="455dp"
         android:src="@drawable/uno_card"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
