--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="primary">#FF4444</color>
+    <color name="green">#67E100</color>
+    <color name="red">#FF1744</color>
 </resources>
