--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -11,6 +11,10 @@
             android:title="Chatrooms" />
 
         <item
+            android:id="@+id/nav_games"
+            android:icon="@drawable/img"
+            android:title="Game Lobby" />
+        <item
             android:id="@+id/nav_logout"
             android:icon="@drawable/ic_logout"
             android:title="Logout" />
