--- a/app/src/main/res/layout/fragment_game_room.xml
+++ b/app/src/main/res/layout/fragment_game_room.xml
@@ -9,25 +9,28 @@
 
     <ImageView
         android:id="@+id/drawCardButton"
-        android:layout_width="95dp"
+        android:layout_width="90dp"
         android:layout_height="95dp"
         android:src="@drawable/uno_card"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        tools:layout_editor_absoluteX="160dp"
+        tools:layout_editor_absoluteY="486dp" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/playerHandRecyclerView"
-        android:layout_width="323dp"
-        android:layout_height="91dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/drawCardButton" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/drawCardButton"
+        tools:listitem="@layout/card_line_item" />
 
     <TextView
         android:id="@+id/textViewGameTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="40dp"
         android:text="TextView"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -45,5 +48,29 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewGameTitle" />
+
+    <ImageView
+        android:id="@+id/currentCardImage"
+        android:layout_width="223dp"
+        android:layout_height="310dp"
+        android:layout_marginBottom="20dp"
+        android:src="@drawable/uno_card_game"
+        app:layout_constraintBottom_toTopOf="@+id/drawCardButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewTurn"
+        app:layout_constraintVertical_bias="0.63" />
+
+    <TextView
+        android:id="@+id/currentCardValue"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Draw 4"
+        android:textAlignment="center"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/drawCardButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewTurn" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
