--- a/app/src/main/res/layout/fragment_game_room.xml
+++ b/app/src/main/res/layout/fragment_game_room.xml
@@ -11,9 +11,11 @@
         android:id="@+id/drawCardButton"
         android:layout_width="90dp"
         android:layout_height="95dp"
+        android:layout_marginTop="10dp"
         android:src="@drawable/uno_card"
-        tools:layout_editor_absoluteX="160dp"
-        tools:layout_editor_absoluteY="486dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/currentCardImage" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/playerHandRecyclerView"
@@ -30,7 +32,7 @@
         android:id="@+id/textViewGameTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="20dp"
         android:text="TextView"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -42,7 +44,7 @@
         android:id="@+id/textViewTurn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="14dp"
         android:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -53,13 +55,11 @@
         android:id="@+id/currentCardImage"
         android:layout_width="223dp"
         android:layout_height="310dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginTop="26dp"
         android:src="@drawable/uno_card_game"
-        app:layout_constraintBottom_toTopOf="@+id/drawCardButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewTurn"
-        app:layout_constraintVertical_bias="0.63" />
+        app:layout_constraintTop_toBottomOf="@+id/textViewTurn" />
 
     <TextView
         android:id="@+id/currentCardValue"
