--- a/app/src/main/res/layout/fragment_game_room.xml
+++ b/app/src/main/res/layout/fragment_game_room.xml
@@ -53,8 +53,8 @@
 
     <ImageView
         android:id="@+id/currentCardImage"
-        android:layout_width="223dp"
-        android:layout_height="310dp"
+        android:layout_width="192dp"
+        android:layout_height="271dp"
         android:layout_marginTop="26dp"
         android:src="@drawable/uno_card_game"
         app:layout_constraintEnd_toEndOf="parent"
@@ -71,6 +71,7 @@
         app:layout_constraintBottom_toTopOf="@+id/drawCardButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewTurn" />
+        app:layout_constraintTop_toBottomOf="@+id/textViewTurn"
+        app:layout_constraintVertical_bias="0.518" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
