--- a/app/src/main/res/layout/card_line_item.xml
+++ b/app/src/main/res/layout/card_line_item.xml
@@ -6,22 +6,22 @@
     android:layout_height="wrap_content">
 
     <ImageView
-        android:id="@+id/imageView4"
-        android:layout_width="115dp"
-        android:layout_height="150dp"
+        android:id="@+id/imageViewCardBack"
+        android:layout_width="99dp"
+        android:layout_height="136dp"
         app:srcCompat="@drawable/uno_card_game"
         tools:layout_editor_absoluteX="3dp"
         tools:layout_editor_absoluteY="5dp" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/textViewCardValue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Draw 4"
         android:textAlignment="center"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/imageView4"
+        app:layout_constraintEnd_toEndOf="@+id/imageViewCardBack"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView4" />
+        app:layout_constraintTop_toTopOf="@+id/imageViewCardBack" />
 </androidx.constraintlayout.widget.ConstraintLayout>
