--- a/app/src/main/res/layout/card_line_item.xml
+++ b/app/src/main/res/layout/card_line_item.xml
@@ -7,11 +7,13 @@
 
     <ImageView
         android:id="@+id/imageViewCardBack"
-        android:layout_width="99dp"
-        android:layout_height="136dp"
-        app:srcCompat="@drawable/uno_card_game"
-        tools:layout_editor_absoluteX="3dp"
-        tools:layout_editor_absoluteY="5dp" />
+        android:layout_width="90dp"
+        android:layout_height="120dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/uno_card_game" />
 
     <TextView
         android:id="@+id/textViewCardValue"
@@ -19,7 +21,7 @@
         android:layout_height="wrap_content"
         android:text="Draw 4"
         android:textAlignment="center"
-        android:textSize="20sp"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/imageViewCardBack"
         app:layout_constraintStart_toStartOf="parent"
