--- a/app/src/main/res/layout/fragment_game_room.xml
+++ b/app/src/main/res/layout/fragment_game_room.xml
@@ -11,7 +11,6 @@
         android:id="@+id/drawCardButton"
         android:layout_width="90dp"
         android:layout_height="95dp"
-        android:layout_marginTop="10dp"
         android:src="@drawable/uno_card"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,7 +19,8 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/playerHandRecyclerView"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -32,9 +32,9 @@
         android:id="@+id/textViewGameTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:text="TextView"
-        android:textSize="20sp"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -44,8 +44,9 @@
         android:id="@+id/textViewTurn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="14dp"
+        android:layout_marginTop="10dp"
         android:text="TextView"
+        android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -53,9 +54,9 @@
 
     <ImageView
         android:id="@+id/currentCardImage"
-        android:layout_width="192dp"
-        android:layout_height="271dp"
-        android:layout_marginTop="26dp"
+        android:layout_width="180dp"
+        android:layout_height="251dp"
+        android:layout_marginTop="13dp"
         android:src="@drawable/uno_card_game"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
