--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -12,7 +12,7 @@
 
         <item
             android:id="@+id/nav_games"
-            android:icon="@drawable/img"
+            android:icon="@drawable/ic_videogame"
             android:title="Game Lobby" />
         <item
             android:id="@+id/nav_logout"
